--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -300,4 +300,5 @@
     <string name="adb_paranoid">ADB paranoia mode</string>
     <string name="adb_paranoid_summary">Immediately reboot if an unknown computer is connected while device is locked</string>
 
+    <string name="default_string">Default</string>
 </resources>
