Settings: add Xperia Settings entry
Change-Id: Iff30ae23e3bb6069be3bf586b63fd3732f060085

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -301,4 +301,5 @@
     <string name="adb_paranoid_summary">Immediately reboot if an unknown computer is connected while device is locked</string>
 
     <string name="default_string">Default</string>
+    <string name="xperia_settings">Xperia Settings</string>
 </resources>
