--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -178,7 +178,18 @@
         android:id="@+id/manufacturer_settings">
         <intent android:action="com.android.settings.MANUFACTURER_APPLICATION_SETTING" />
     </header>
-
+    
+    <!-- Xperia Settings -->
+    <header
+        android:id="@+id/xperia_settings"
+        android:icon="@drawable/ic_device_settings"
+        android:title="@string/xperia_settings">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetPackage="com.cyanogenmod.settings.device"
+            android:targetClass="com.cyanogenmod.settings.device.DeviceSettings" />
+    </header>
+    
     <!-- PERSONAL -->
     <header android:id="@+id/personal_section"
         android:title="@string/header_category_personal" />
